Pagination for images metadata
