# openapi.yml
@@ -103,10 +103,26 @@ paths:
       summary: Returns metadata of images associated with a person.
       parameters:
         - $ref: "#/components/parameters/EncodedPncId"
+        - in: query
+          name: page
+          schema:
+            type: number
+            minimum: 0
+            default: 1
+          required: false
+          description: The page number (starting from 1)
+        - in: query
+          name: per_page
+          schema:
+            type: number
+            minimum: 1
+            default: 10
+          required: false
+          description: The maximum number of results for a page
       responses:
         "200":
           description: Successfully found a person with the provided PNC ID.
-          content:
+          data:
             application/json:
               schema:
                 type: object
@@ -116,6 +132,8 @@ paths:
                     minItems: 0
                     items:
                       $ref: "#/components/schemas/Image"
+                    pagination:
+                      $ref: "#/components/schemas/Pagination"
         "404":
           description: Failed to find a person with the provided PNC ID.
           content:
